# maou-sdk

./: .gitignore  CLAUDE.md  GLOSSARY.md  INSTALL.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
SDK/: SDK愿景.md
SDK/需求/: 工具需求.md  (+6 more)
_toolinit_test/: run.mts
cli/: CHECKLIST-UI.md  DESIGN.md  README.md  RESEARCH-rust-pi.md  RESEARCH.md  package.json  scroll-bench-result.txt  test-harmless.txt  tsconfig.json
cli/native/term-raster/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
cli/native/term-raster/src/: lib.rs
cli/tui-ratatui/: Cargo.toml  README.md
cli/tui-ratatui/src/: main.rs  maou_logo.rs  markdown.rs  messages.rs  protocol.rs  theme.rs  vram.rs
cli/tui-ratatui/src/app/: draw.rs  edit_safety_tests.rs  input_paint.rs  keys.rs  mod.rs  mouse_handlers.rs  protocol_io.rs  state.rs  text_util.rs
cli/tui-ratatui/src/layout/: mod.rs  shell.rs  solve.rs  tree.rs
cli/tui-ratatui/src/mouse/: clipboard.rs  controller.rs  helpers.rs  mod.rs  types.rs
docs/: NATIVE_PREBUILD.md  SDK设计.md  WINDOWS-TEST-ON-MAC.md  coupling-cohesion-audit.md  harness-pipeline-isolation.md
lsp-engine/: package.json
mouse-demo/: SPEC.md  blue-sel.js  cc-feel.js  compare.js  global-sel.js  index.js  ink-align-test.js  ink-precise.js  intercept.js  inverse-test.js  keytest.js  mode1000.js  no-mouse.js  osc52-test.js  package.json  toggle-test.js  vram.js
opencli-engine/: package.json  tsconfig.json
scripts/: build-native.ps1  build-native.sh  clean-build-cache.sh  ensure-dcg.mjs  ensure-maou-tui.mjs  ensure-rg.mjs  ensure-sqry.mjs  ensure-terminal-engine.mjs  generate-models.mjs  install-cli-launcher.sh  install.ps1  install.sh
sqry-engine/: package.json
terminal-engine/: Cargo.toml  index.d.ts  index.js  load.mjs  package-lock.json  package.json  terminal_engine.d.ts  terminal_engine.js
terminal-engine/src/: error.rs  filter.rs  lib.rs  logger.rs  persistence.rs  process_group.rs  registry.rs  sandbox.rs  shell.rs  terminal.rs
tui/: go.mod  go.sum  main.go  package.json  preload.mjs  tsconfig.json
webui/: DESIGN.md  README.md  package.json  tsconfig.client.json  tsconfig.server.json  vite.config.ts
(+848 files in other folders)
