[package]
name = "terminal-engine"
version = "0.1.0"
edition = "2021"
description = "高性能终端引擎 — Rust + napi-rs"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "tokio_rt", "napi4", "error_anyhow"] }
napi-derive = "3"
portable-pty = { path = "../vendor/portable-pty" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
dashmap = "6"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
strip = true
