[package]
name = "maou-tui-ratatui"
version = "0.1.0"
edition = "2021"
description = "Maou CLI Ratatui backend (optional; Ink remains default)"
license = "MIT"
publish = false

[[bin]]
name = "maou-tui-ratatui"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
anyhow = "1"
libc = "0.2"
# Safe lib swaps (parse / clipboard only — paint & OSC52 stay custom):
pulldown-cmark = "0.12"
base64 = "0.22"
# text-only (no image clipboard / image crate)
arboard = { version = "3", default-features = false }
