[package]
name = "maou-term-raster"
version = "0.1.0"
edition = "2021"
publish = false
description = "Native terminal frame encoder for maou CLI (Ink-compatible paint path)"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
